# flare

./: .gitignore  Cargo.toml  prospects.json  template.md  todo.md
.playwright-mcp/: page-2026-06-02T03-16-05-671Z.yml
scraper/: .gitignore  main.ts  package.json
scrapper/: .gitignore  README.md  main.user.ts  package.json
scrapper/scripts/: banner.ts  watcher.ts
scrapper/src/: archive.ts  board.ts  lawyer.ts  memory.ts  page.ts  probe.ts  profile.ts  scan.ts
sender/: .env.example  Cargo.toml  README.md
sender/.playwright-mcp/: page-2026-06-21T21-07-24-262Z.yml  page-2026-06-21T21-07-50-003Z.yml  page-2026-06-21T21-08-03-179Z.yml  page-2026-06-21T21-08-13-691Z.yml  page-2026-06-21T21-08-21-632Z.yml  page-2026-06-21T21-08-30-969Z.yml
sender/src/: campaign.rs  ledger.rs  lib.rs  mailbox.rs  main.rs  message.rs  template.rs  throttle.rs
sender/src/app/: cli.rs  mod.rs  workspace.rs
sender/src/domain/: campaign.rs  message.rs  mod.rs  prospect.rs  template.rs  warmup.rs
sender/src/domain/tests/: campaign_tests.rs  prospect_tests.rs  template_tests.rs  warmup_tests.rs
sender/src/infrastructure/: client.rs  ledger.rs  link.rs  mod.rs
sender/src/infrastructure/tests/: client_tests.rs  ledger_tests.rs  link_tests.rs
src/: campaign.rs  ledger.rs  mailbox.rs  main.rs  prospect.rs  template.rs  throttle.rs
storage/: template.md
