[package]
name = "prospect-mailer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
google-gmail1 = "5"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
mime = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
yup-oauth2 = "9"
